# interswitch-python

./: .gitignore  LICENSE  README.md  pyproject.toml  scratch.md
docs/: 00-getting-started.md  01-configuration.md  02-error-handling.md  03-async.md  04-frameworks.md  05-api-reference.md  06-advanced.md  07-logging.md
examples/: demo.py  demo_async.py  demo_sync.py
src/interswitch/: __init__.py  async_client.py  client.py  config.py  exceptions.py  http_client.py  interswitch_types.py  permissions.py  token_manager.py
src/interswitch/auth/: __init__.py  async_token_manager.py  base.py  sync_token_manager.py
src/interswitch/http_client/: async_request.py  base.py  sync_request.py
tests/: conftest.py  test_basic.py
